--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "dependencies": {
+    "aws-lambda": "^1.0.7",
     "express": "^5.1.0",
+    "netlify-lambda": "^2.0.16",
     "serverless": "^4.19.1",
     "serverless-http": "^4.0.0",
     "socket.io": "^4.8.1"
   },
-
   "scripts": {
-    "start": "./node_modules/.bin/netifly-lambda serve src",
-    "build": "./node_modules/.bin/netifly-lambda serve src"
-    
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   }
 }
